--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 # a11y-html-element-examples
 
-<a href="/blockquote/blockquote.html">Accessibile Quote</a>
+<a href="./blockquote/blockquote.html">Accessibile Quote</a>
