--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 # a11y-html-element-examples
 
-<a href="./blockquote/blockquote.html">Accessibile Quote</a>
+<a href="/a11y-examples/blockquote/blockquote.html">Accessibile Quote</a>
