--- a/blockquote/blockquote.html
+++ b/blockquote/blockquote.html
@@ -18,8 +18,9 @@
 
       <a href="https://html.spec.whatwg.org/multipage/grouping-content.html#the-blockquote-element">4.4.4 The blockquote element</a><br>
       <a href="https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/">Blockquote Example</a>
-      <a href="https://christosptr.github.io/a11y-examples/">Go to table of Content</a>
-       
+<div>
+       <a href="https://christosptr.github.io/a11y-examples/">Go to table of Content</a>
+</div>   
    <main> 
 
 </body>
