--- a/blockquote/blockquote.html
+++ b/blockquote/blockquote.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>brock quote example</title>
+    <title>Block quote example</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
 
