Add Visual Studio plugin references

--- a/blockquote/blockquote.html
+++ b/blockquote/blockquote.html
@@ -13,17 +13,23 @@
       <blockquote>
         <p>Help us to find and organise support – don’t they want us to be the best parents we can be even while the kids are in care?</p>
       </blockquote>
+
+      <pre><code>
+        &lt;blockquote&gt;
+        &lt;p&gt; Help ....  &lt;/p&gt;
+        &lt;/blockquote&gt;
+    </code></pre>
+      
       <blockquote>
         <p>It’s an unbreakable bond.. yeah its beautiful. I have so much to offer them</p>
       </blockquote>
 
       <a href="https://html.spec.whatwg.org/multipage/grouping-content.html#the-blockquote-element">4.4.4 The blockquote element</a><br>
       <a href="https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/">Blockquote Example</a>
-<div>
-       <a href="https://christosptr.github.io/a11y-examples/">Go to table of Content</a>
+<div role="navigation">
+       <a href="../index.html">Go to table of Content</a>
 </div>   
    <main> 
-
-</body>
+ </body>
 
 </html>
