--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
-<h1> Table of Content </h2>
-<br>
-<a href="/a11y-examples/blockquote/blockquote.html">Accessibile Quote</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
+    <main>
+        <h1> Table of Content </h2>
+            <br>
+
+            <a href="./blockquote/blockquote.html">Accessibile Quote</a><br>
+
+            <h2>Visual Studio plugins </h2>
+            <div>
+                <a href="https://www.youtube.com/watch?v=Z5RkLrSDlFA">5 Awesome Visual Studio Code Extensions for Writing HTML</a><br> 
+                <a href=" https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-close-tag">Auto Close Tag</a><br>
+                <a href="https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag">Auto Rename Tag</a><br>
+                <a href="https://marketplace.visualstudio.com/items?itemName=hwencc.html-tag-wrapper">HTML Tag Wrapper</a><br>
+                <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">Live Server></a><br>
+                <a href="https://marketplace.visualstudio.com/items?itemName=techer.open-in-browser"> Open In Browser</a>
+
+            </div>
+    </main>
+</body>
+
+</html>
