Add Visual Studio plugin references

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href=" https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-close-tag">Auto Close Tag</a><br>
                 <a href="https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag">Auto Rename Tag</a><br>
                 <a href="https://marketplace.visualstudio.com/items?itemName=hwencc.html-tag-wrapper">HTML Tag Wrapper</a><br>
-                <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">Live Server></a><br>
+                <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">Live Server</a><br>
                 <a href="https://marketplace.visualstudio.com/items?itemName=techer.open-in-browser"> Open In Browser</a>
 
             </div>
