--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <main>
         <h1> Table of Content </h2>
             <br>
-
-            <a href="./blockquote/blockquote.html">Accessibile Quote</a><br>
+            <a href="./skipLink/skipLink.html">SkipLink Example</a><br>
+            <a href="./blockquote/blockquote.html">Quote Example</a><br>
 
             <h2>Visual Studio plugins </h2>
             <div>
