--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1> Table of Content </h2>
+        <h1> Table of Content (Draft work in progress)</h2>
             <br>
             <a href="./skipLink/skipLink.html">SkipLink Example</a><br>
             <a href="./blockquote/blockquote.html">Quote Example</a><br>
