add footer navigation

--- a/blockquote/blockquote.html
+++ b/blockquote/blockquote.html
@@ -8,28 +8,31 @@
 
 <body>
 
-   <main role="main">
-       <h1>Example 1.1</h1>
-      <blockquote>
-        <p>Help us to find and organise support – don’t they want us to be the best parents we can be even while the kids are in care?</p>
-      </blockquote>
+    <main role="main">
+        <h1>Example</h1>
+        <blockquote>
+            <p>Help us to find and organise support – don’t they want us to be the best parents we can be even while the kids are in care?</p>
+        </blockquote>
 
-      <pre><code>
+        <pre><code>
         &lt;blockquote&gt;
         &lt;p&gt; Help ....  &lt;/p&gt;
         &lt;/blockquote&gt;
     </code></pre>
-      
-      <blockquote>
-        <p>It’s an unbreakable bond.. yeah its beautiful. I have so much to offer them</p>
-      </blockquote>
 
-      <a href="https://html.spec.whatwg.org/multipage/grouping-content.html#the-blockquote-element">4.4.4 The blockquote element</a><br>
-      <a href="https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/">Blockquote Example</a>
-<div role="navigation">
-       <a href="../index.html">Go to table of Content</a>
-</div>   
-   <main> 
- </body>
+        <blockquote>
+            <p>It’s an unbreakable bond.. yeah its beautiful. I have so much to offer them</p>
+        </blockquote>
+
+        <div role="navigation">
+            <a href="../index.html">Go to table of Content</a>
+        </div>
+        <h1>Reference for block element </h1>
+
+        <a href="https://html.spec.whatwg.org/multipage/grouping-content.html#the-blockquote-element">4.4.4 The blockquote element</a><br>
+        <a href="https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/">Blockquote Example</a>
+
+        <main>
+</body>
 
 </html>
