--- a/skipLink/skipLink.html
+++ b/skipLink/skipLink.html
@@ -17,6 +17,12 @@
         <h1>Main Content</h1>
         <p>Main Content Paragraph</p>
         <p><a href="#">dummy link with in main content</a></p>
+
+        <div role="navigation">
+            <a href="../index.html">Go to table of Content</a>
+        </div>
+
+        <h1>Reference for skip-link</h1>
     </main>
 </body>
 
