--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -70,12 +70,11 @@
 
 <nav role="navigation" aria-label="Left" class="left-menu">
   <h2>Left Menu</h2>
-  <a href="bootstrap.html">bootstrap</a>
-  <a href="carousel.html">carousel</a>
-  <a href="heading.html">heading</a>
-  <a href="kbr.html">kbr</a>
+  <a href="bootstrap.html">bootstrap</a><br>
+  <a href="carousel.html">carousel</a><br>
+  <a href="heading.html">heading</a><br>
+  <a href="kbr.html">kbr</a><br>
   <a href="responsiveDesign.html">responsiveDesign</a>
-  <a href=""></a>
 </nav>
 
 <main role="main" class="main">
