bootstrap with media queries

--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -59,16 +59,21 @@
 </head>
 
 <body>
-          <h1>Media Queries</h1>
-<p>Resize the browser window.</p>
 
-<p>Make sure you reach the breakpoint at 800px when resizing this frame.</p>
+        <div class="jumbotron text-center">
+                <h1>My First Bootstrap Page</h1>
+                <p>Resize this responsive page to see the effect!</p> 
+                <h2>Media Queries</h2>
+                <p>Resize the browser window.</p>
+                <p>Make sure you reach the breakpoint at 800px when resizing this frame.</p>
+              </div>
+         
 
 <nav role="navigation" aria-label="main" class="main-menu">
   <p>Main Menu</p>
 </nav>
 
-<nav role="navigation" aria-label="Left" class="left-menu">
+<nav role="navigation" aria-label="Left" class="col-sm-4 left-menu">
   <h2>Left Menu</h2>
   <a href="bootstrap.html">bootstrap</a><br>
   <a href="carousel.html">carousel</a><br>
@@ -77,11 +82,11 @@
   <a href="responsiveDesign.html">responsiveDesign</a>
 </nav>
 
-<main role="main" class="main">
+<main role="main" class="col-sm-4 main">
   <p>Main Content</p>
 </main>
 
-<div class="right">
+<div class="col-sm-4 right">
   <p>Right Content</p>
 </div>
 
