--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./blockquote/css/main.css" />
+    
 </head>
 
 <body>
@@ -34,7 +35,9 @@
                 </div>
             </article>
             -->
-    </main>
+            <p><a href="./sandpit/index.html">sandpit</a></p>
+            <a href="https://docs.emmet.io/cheat-sheet/">Emmet Cheat sheet</a>
+           
 </body>
 
 </html>
