--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <br>
             <a href="./skipLink/skipLink.html">SkipLink Example</a><br>
             <a href="./blockquote/blockquote.html">Quote Example</a><br>
-            <a href="./exercise11-menubar/finished.html">Menu examples</a><br>
+            <a href="./menubar/finished.html">Menubar examples</a><br>
             <hr>
             <a href="https://github.com/christosptr/a11y-examples">github repository</a><br>
 
