--- a/menubar/finished.html
+++ b/menubar/finished.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Exercise 11</title>
+    <title>Sample Menubar</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
 
@@ -13,65 +14,68 @@
     <script src="assets/js/PopupMenuItemLinks.js" type="text/javascript"></script>
     <link href="assets/css/base.css" rel="stylesheet">
     <link href="assets/css/menubarLinks.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Exercise 11</h1>
+</head>
+
+<body>
+    <h1>Menubar example</h1>
     <p><a href="#">Dummy link top</a></p>
+    <p>Tab on to the menu and then use the arror keys to navigate the menubar</p>
 
     <nav role="navigation" aria-label="Main menu">
-      <ul id="menubar1" role="menubar">
-        <li>
-          <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
-          <ul role="menu" aria-label="About">
-            <li role="none">
-              <a role="menuitem" href="#">Overview</a>
-            </li>
-            <li role="none">
-              <a role="menuitem" href="#">Administration</a>
-            </li>
-            <li role="none">
-              <a role="menuitem" href="#">Facts</a>
+        <ul id="menubar1" role="menubar">
+            <li>
+                <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
+                <ul role="menu" aria-label="About">
+                    <li role="none">
+                        <a role="menuitem" href="#">Overview</a>
+                    </li>
+                    <li role="none">
+                        <a role="menuitem" href="#">Administration</a>
+                    </li>
+                    <li role="none">
+                        <a role="menuitem" href="#">Facts</a>
+                    </li>
+                    <li>
+                        <a role="menuitem" href="#">Campus Tours</a>
+                    </li>
+                </ul>
             </li>
             <li>
-              <a role="menuitem" href="#">Campus Tours</a>
+                <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
+                <ul role="menu" aria-label="Admissions">
+                    <li role="none">
+                        <a role="menuitem" href="#">Apply</a>
+                    </li>
+                    <li role="none">
+                        <a role="menuitem" href="#">Tuition</a>
+                    </li>
+                    <li role="none">
+                        <a role="menuitem" href="#">Sign Up</a>
+                    </li>
+                </ul>
             </li>
-          </ul>
-        </li>
-        <li>
-          <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
-          <ul role="menu" aria-label="Admissions">
-            <li role="none">
-              <a role="menuitem" href="#">Apply</a>
+            <li>
+                <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
+                <ul role="menu" aria-label="Academics">
+                    <li role="none">
+                        <a role="menuitem" href="#">Colleges &amp; Schools</a>
+                    </li>
+                    <li role="none">
+                        <a role="menuitem" href="#">Programs of Study</a>
+                    </li>
+                    <li role="none">
+                        <a role="menuitem" href="#">Honors Programs</a>
+                    </li>
+                </ul>
             </li>
-            <li role="none">
-              <a role="menuitem" href="#">Tuition</a>
-            </li>
-            <li role="none">
-              <a role="menuitem" href="#">Sign Up</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
-          <ul role="menu" aria-label="Academics">
-            <li role="none">
-              <a role="menuitem" href="#">Colleges &amp; Schools</a>
-            </li>
-            <li role="none">
-              <a role="menuitem" href="#">Programs of Study</a>
-            </li>
-            <li role="none">
-              <a role="menuitem" href="#">Honors Programs</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+        </ul>
     </nav>
     <p><a href="#">Dummy link bottom</a></p>
 
     <script type="text/javascript">
-      var menubar = new Menubar(document.getElementById('menubar1'));
-      menubar.init();
+        var menubar = new Menubar(document.getElementById('menubar1'));
+        menubar.init();
     </script>
-  </body>
+</body>
+
 </html>
