add navigation menu

--- a/menubar/finished.html
+++ b/menubar/finished.html
@@ -72,6 +72,10 @@
     </nav>
     <p><a href="#">Dummy link bottom</a></p>
 
+    <div role="navigation">
+        <a href="../index.html">Go to table of Content</a>
+    </div>
+
     <script type="text/javascript">
         var menubar = new Menubar(document.getElementById('menubar1'));
         menubar.init();
