--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -118,6 +118,7 @@
                 <a href="kbr.html ">kbr</a><br>
                 <a href="responsiveDesign.html">responsiveDesign</a>
                 <a href="https://www.codecademy.com/articles/f1-u3-github-pages"></a>Deploying to GitHub Pages</a>
+                <a href="https://www.youtube.com/watch?v=rfscVS0vtbw&t=838s"></a>Learn Python - Full Course for Beginners [Tutorial]</a>
             </nav>
 
             <main role="main " class="col-sm-6 main " style="z-index: -1; ">
