--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -116,8 +116,8 @@
                 <a href="carousel.html ">carousel</a><br>
                 <a href="heading.html ">heading</a><br>
                 <a href="kbr.html ">kbr</a><br>
-                <a href="responsiveDesign.html">responsiveDesign</a>
-                <a href="https://www.codecademy.com/articles/f1-u3-github-pages">Deploying to GitHub Pages</a>
+                <a href="responsiveDesign.html">responsiveDesign</a><br>
+                <a href="https://www.codecademy.com/articles/f1-u3-github-pages">Deploying to GitHub</a><br>
                 <a href="https://www.youtube.com/watch?v=rfscVS0vtbw&t=838s">Learn Python</a>
             </nav>
 
